# tdis

./: README.md  csv_analyze_in_tracks.py
.github/workflows/: documentation.yml  linux-build-test.yml  pytdis.yml
containers/tdis-jana2-error/: Dockerfile
containers/tdis-pre/: Dockerfile
docs/: csv.md  flags.md  implementation.md  install.md  run.md
docs/_media/: tracking-diagram.drawio
docs/development/: contributing.md
pytdis/: pyproject.toml
pytdis/pytdis/: geometry.py  io.py
pytdis/tests/: test_geometry.py  test_io.py
python/: analyze_tdis_hits.cpp  analyze_tracks.cpp  csv_analysis_requirements.md  csv_analyze_in_hits.py  csv_analyze_in_tracks.py  requirements_csv_analysis.txt  track_analysis.cpp
source/extensions/jana/: JOmniFactory.h  README.md
source/extensions/spdlog/: SpdlogFormatters.h
source/tdis/: CMakeLists.txt  PadGeometryHelper.hpp  acts_edm.yml  edm.yaml  main.cpp
source/tdis/deprecated/: CKFTracking.cc  CKFTracking.h  ConfiguredFitter.hpp  ConfiguredKalmanFitter.cpp  ConfiguredKalmanFitter.h  GeometryProvider.hpp  MeasurementCalibration.cpp  MeasurementCalibration.h  RefittingCalibrator.cpp  RefittingCalibrator.h  TrackFittingAlgorithm.cpp  TrackParamTruthInit.cc  TrackParamTruthInit.h
source/tdis/geometry/: ActsGeometryService.cpp  ActsGeometryService.h  BuildCylindricalDetector.cpp  BuildCylindricalDetector.h  MtpcDetectorElement.cpp  MtpcDetectorElement.h  TGeoGeometryService.cpp  TGeoGeometryService.h  TdisGeometryHelper.hpp
source/tdis/io/: CsvWriteProcessor.hpp  DigitizedDataEventSource.hpp  PodioWriteProcessor.hpp
source/tdis/logging/: ActsGeometryService.cpp  ActsGeometryService.h  BuildCylindricalDetector.cpp  BuildCylindricalDetector.h  LogService.hpp  MtpcDetectorElement.cpp  TGeoGeometryService.cpp  TGeoGeometryService.h
source/tdis/tracking/: ActsGeometryService.cc  ActsGeometryService.h  ActsLogHeplers.h  BuildCylindricalDetector.cpp  BuildCylindricalDetector.h  ConfiguredFitter.hpp  ConfiguredKalmanFitter.cpp  ConfiguredKalmanFitter.h  KalmanFittingFactory.cpp  KalmanFittingFactory.h  Measurement2DFactory.h  MtpcDetectorElement.cpp  PodioSurfaceIdConverter.h  ReconstructedHitFactory.h  RefittingCalibrator.cpp  RefittingCalibrator.h  TrackingTypes.h  TruthTrackParameterFactory.h  TruthTrackSeedFactory.h  TruthTracksHitsSeedsFactory.cpp  TruthTracksHitsSeedsFactory.h  TruthTracksSeedsHitsFactory.cpp  TruthTracksSeedsHitsFactory.h
